--- a/Restaurant/appsettings.json
+++ b/Restaurant/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "defaultConnection": "Server=.;Database=PortalMVC;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+  }
 }
