--- a/Restaurant/appsettings.json
+++ b/Restaurant/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "defaultConnection": "Server=.;Database=PortalMVC;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+    "defaultConnection": "Server=.;Database=RestaurantMVC;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
   }
 }
