--- a/Restaurnat.BLL/Restaurnat.BLL.csproj
+++ b/Restaurnat.BLL/Restaurnat.BLL.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="15.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.9" />
@@ -22,8 +23,6 @@
 
   <ItemGroup>
     <Folder Include="Helper\" />
-    <Folder Include="ModelVM\" />
-    <Folder Include="Mapper\" />
   </ItemGroup>
 
 </Project>
