fix some errors

--- a/Restaurant/Restaurant.PL.csproj
+++ b/Restaurant/Restaurant.PL.csproj
@@ -23,5 +23,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Restaurnat.BLL\Restaurnat.BLL.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="wwwroot\Files\" />
+  </ItemGroup>
 
 </Project>
