--- a/Restaurant/Restaurant.PL.csproj
+++ b/Restaurant/Restaurant.PL.csproj
@@ -22,7 +22,9 @@
   <ItemGroup>
     <ProjectReference Include="..\Restaurnat.BLL\Restaurnat.BLL.csproj" />
   </ItemGroup>
-
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Net.Compilers.Toolset" Version="4.9.0" PrivateAssets="all" />
+	</ItemGroup>
   <ItemGroup>
     <None Include="wwwroot\assets\img\.DS_Store" />
     <None Include="wwwroot\assets\vendor\.DS_Store" />
