--- a/Restaurant/appsettings.json
+++ b/Restaurant/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
 
-  "ConnectionStrings": {
-    "defaultConnection": "Server=.;Database=RestaurantMVC;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
-  }
+    "ConnectionStrings": {
+        "defaultConnection": "Server=DESKTOP-TBVH1HT\\MSSQLSERVER01;Database=RestaurantMVC;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+    }
 }
