Updating Chef and Event PL- 3/3

--- a/Restaurant/appsettings.json
+++ b/Restaurant/appsettings.json
@@ -1,13 +1,21 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
 
-  "ConnectionStrings": {
-    "defaultConnection": "Server=.;Database=RestaurantMVC;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
-  }
+    "ConnectionStrings": {
+        "defaultConnection": "Server=.;Database=RestaurantMVC;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+    },
+    "SmtpSettings": {
+        "Server": "smtp.gmail.com",
+        "Port": 587,
+        "SenderName": "RestaurantHum",
+        "SenderEmail": "ahmednoran200475@gmail.com",
+        "Username": "ahmednoran200475@gmail.com",
+        "Password": "pxvp rpvm oyai csuu"
+    }
 }
