--- a/Restaurant/appsettings.json
+++ b/Restaurant/appsettings.json
@@ -8,7 +8,7 @@
     "AllowedHosts": "*",
 
     "ConnectionStrings": {
-        "defaultConnection": "Server=.;Database=RestaurantMVC;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+        "defaultConnection": "Server=DESKTOP-TBVH1HT\\MSSQLSERVER01;Database=RestaurantHum;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
     },
     "SmtpSettings": {
         "Server": "smtp.gmail.com",
